fix blurry modals from sweet-modal-vue

--- a/resources/sass/modal.scss
+++ b/resources/sass/modal.scss
@@ -91,3 +91,7 @@
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
+
+.sweet-modal-overlay {
+  -webkit-perspective: none !important;
+}
